--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sharp-dash-craft</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Dashboard | JUSPAY | Dhiraj Borse</title>
+    <meta name="description" content="A modern, responsive dashboard application built with React, TypeScript, and Tailwind CSS" />
+    <meta name="author" content="Dhiraj Borse" />
 
-    <meta property="og:title" content="sharp-dash-craft" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Sharp Dash Craft - Modern Dashboard" />
+    <meta property="og:description" content="A modern, responsive dashboard application built with React, TypeScript, and Tailwind CSS" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
